--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -29,6 +29,9 @@
     --chart-4: 43 74% 66%;
     --chart-5: 27 87% 67%;
     --radius: 0.5rem;
+
+    --negative: 12 76% 61%;
+    --positive: 173 58% 39%;
   }
   .dark {
     --background: 0 0% 3.9%;
